[package]
name = "labwired-ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
svd = ["dep:svd-parser"]
config-interop = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svd-parser = { version = "0.14", optional = true }
thiserror = "1.0"
