# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
#
# This software is released under the MIT License.

[package]
name = "labwired-flasher"
version.workspace = true
edition = "2021"
description = "Linux-native reflasher for NUCLEO/STLINK-V2-1 debug probes — convert between native ST-Link firmware and SEGGER J-Link OB without leaving Linux"
license = "MIT"

[[bin]]
name = "labwired-flasher"
path = "src/main.rs"

[dependencies]
rusb = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
